fix user spacing

--- a/client/css/less/components/sidebar.less
+++ b/client/css/less/components/sidebar.less
@@ -166,7 +166,8 @@
 // sidebar user filter widget styles
 .sidebar .user-filter-widget {
   .group {
-    margin: 0 10px;
+    width: 82%;
+    margin: 0 auto;
     .clearfix();
 
     .empty { margin-top: 6px; }
